fix(card): updated title ids

--- a/src/patternfly/components/Card/card-title-text.hbs
+++ b/src/patternfly/components/Card/card-title-text.hbs
@@ -6,7 +6,7 @@
     {{{card-title-text--attribute}}}
   {{/if}}>
   {{#if card-title-text--value}}
-    {{card-title-text--value}}
+    {{{card-title-text--value}}}
   {{else if @partial-block}}
     {{> @partial-block}}
   {{/if}}
