--- a/src/patternfly/components/Card/card-title.hbs
+++ b/src/patternfly/components/Card/card-title.hbs
@@ -1,4 +1,7 @@
 <div class="pf-c-card__title{{#if card-title--modifier}} {{card-title--modifier}}{{/if}}"
+  {{#if card-title--id}}
+    id="{{card-title--id}}"
+  {{/if}}
   {{#if card-title--attribute}}
     {{{card-title--attribute}}}
   {{/if}}>
