--- a/src/patternfly/demos/Card/card-template-gallery.hbs
+++ b/src/patternfly/demos/Card/card-template-gallery.hbs
@@ -22,7 +22,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title card-title-text--value="Patternfly" card-title-text--attribute=(concat 'id="' card--id '-check-label"')}}
+    {{#> card-title card-title-text--value="Patternfly" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -41,7 +41,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title card-title-text--value="ActiveMq" card-title-text--attribute=(concat 'id="' card--id '-check-label"')}}
+    {{#> card-title card-title-text--value="ActiveMq" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -60,7 +60,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title card-title-text--value="Apache Spark" card-title-text--attribute=(concat 'id="' card--id '-check-label"')}}
+    {{#> card-title card-title-text--value="Apache Spark" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -79,7 +79,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title card-title-text--value="Avro" card-title-text--attribute=(concat 'id="' card--id '-check-label"')}}
+    {{#> card-title card-title-text--value="Avro" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -98,7 +98,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title card-title-text--value="Azure Services" card-title-text--attribute=(concat 'id="' card--id '-check-label"')}}
+    {{#> card-title card-title-text--value="Azure Services" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -117,7 +117,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title card-title-text--value="Crypto" card-title-text--attribute=(concat 'id="' card--id '-check-label"')}}
+    {{#> card-title card-title-text--value="Crypto" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -136,7 +136,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title card-title-text--value="DropBox" card-title-text--attribute=(concat 'id="' card--id '-check-label"')}}
+    {{#> card-title card-title-text--value="DropBox" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -155,7 +155,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title card-title-text--value="JBoss Data Grid" card-title-text--attribute=(concat 'id="' card--id '-check-label"')}}
+    {{#> card-title card-title-text--value="JBoss Data Grid" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -174,7 +174,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title card-title-text--value="Rest" card-title-text--attribute=(concat 'id="' card--id '-check-label"')}}
+    {{#> card-title card-title-text--value="Rest" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
@@ -194,7 +194,7 @@
         {{/check}}
       {{/card-actions}}
     {{/card-header}}
-    {{#> card-title card-title-text--value="SWAGGER" card-title-text--attribute=(concat 'id="' card--id '-check-label"')}}
+    {{#> card-title card-title-text--value="SWAGGER" card-title-text--id=(concat card--id '-check-label')}}
       {{#> content}}
         <small>Provided by Red Hat</small>
       {{/content}}
