--- a/src/patternfly/components/Label/label-text.hbs
+++ b/src/patternfly/components/Label/label-text.hbs
@@ -2,8 +2,8 @@
   {{#if label-text--attribute}}
     {{{label-text--attribute}}}
   {{/if}}>
-  {{#if label-text--text}}
-    {{label-text--text}}
+  {{#if label-text--value}}
+    {{{label-text--value}}}
   {{else if @partial-block}}
     {{> @partial-block}}
   {{/if}}
