--- a/src/patternfly/components/Table/table-th.hbs
+++ b/src/patternfly/components/Table/table-th.hbs
@@ -2,7 +2,8 @@
   {{~#if table-th--compound-expansion-toggle}} pf-c-table__compound-expansion-toggle{{/if}}
   {{~#if table-th--sortable}} pf-c-table__sort{{/if}}
   {{~#if table-th--IsSortable}} pf-c-table__sort{{/if}}
-  {{~#if table-th--IsStickyColumn}} pf-c-table__sticky-column{{/if}}
+  {{~#if table-th--IsStickyLeft}} pf-c-table__sticky-left{{/if}}
+  {{~#if table-th--IsStickyRight}} pf-c-table__sticky-right{{/if}}
   {{~#if table-th--toggle}} pf-c-table__toggle{{/if}}
   {{~#if table-th--check}} pf-c-table__check{{/if}}
   {{~#if table-th--action}} pf-c-table__action{{/if}}
