--- a/src/patternfly/components/Table/templates/table--scrollable--tbody--tr.hbs
+++ b/src/patternfly/components/Table/templates/table--scrollable--tbody--tr.hbs
@@ -1,11 +1,19 @@
 {{#> table-tr}}
   {{#if table--scrollable--Column1IsStickyColumn}}
-    {{> table--scrollable--th table--scrollable--th--modifier=table--scrollable--th--modifier--cell-1-modifier table--scrollable--th--content=cell-1--content table-th--IsStickyColumn="true" table-th--attribute='style="--pf-c-table__sticky-column--MinWidth: 100px;"'}}
+    {{> table--scrollable--th
+        table--scrollable--th--modifier=table--scrollable--th--modifier--cell-1-modifier
+        table--scrollable--th--content=cell-1--content
+        table-th--IsStickyLeft=true
+        table-th--attribute='style="--pf-c-table__sticky--cell--MinWidth: 100px;"'}}
   {{else}}
     {{> table--scrollable--td table--scrollable--td--content=cell-1--content}}
   {{/if}}
   {{#if table--scrollable--Column2IsStickyColumn}}
-    {{> table--scrollable--th table--scrollable--th--modifier=table--scrollable--th--modifier--cell-2-modifier table--scrollable--th--content=cell-2--content table-th--IsStickyColumn="true" table-th--attribute='style="--pf-c-table__sticky-column--MinWidth: 80px; --pf-c-table__sticky-column--Left: 100px;"'}}
+    {{> table--scrollable--th
+        table--scrollable--th--modifier=table--scrollable--th--modifier--cell-2-modifier
+        table--scrollable--th--content=cell-2--content
+        table-th--IsStickyLeft=true
+        table-th--attribute='style="--pf-c-table__sticky--cell--MinWidth: 80px; --pf-c-table__sticky-left--Left: 100px;"'}}
   {{else}}
     {{> table--scrollable--td table--scrollable--td--content=cell-2--content}}
   {{/if}}
@@ -15,5 +23,14 @@
   {{> table--scrollable--td table--scrollable--td--content=cell-6--content}}
   {{> table--scrollable--td table--scrollable--td--content=cell-7--content}}
   {{> table--scrollable--td table--scrollable--td--content=cell-8--content}}
-  {{> table--scrollable--td table--scrollable--td--content=cell-9--content}}
+
+  {{#if table--scrollable--ColumnLastIsStickyColumn}}
+    {{> table--scrollable--th
+        table--scrollable--th--modifier=table--scrollable--th--modifier--cell-9-modifier
+        table--scrollable--th--content=cell-9--content
+        table-th--attribute='scope="col" style="--pf-c-table__sticky--cell--MinWidth: 150px;"'
+        table-th--IsStickyRight=true}}
+  {{else}}
+    {{> table--scrollable--td table--scrollable--td--content=cell-9--content table--scrollable--td--icon=cell-9--icon}}
+  {{/if}}
 {{/table-tr}}
