--- a/src/patternfly/components/Chip/chip.scss
+++ b/src/patternfly/components/Chip/chip.scss
@@ -17,23 +17,26 @@
   --pf-c-chip--m-draggable--BoxShadow: var(--pf-global--BoxShadow--sm);
   --pf-c-chip--m-draggable__icon--FontSize: var(--pf-global--icon--FontSize--sm);
 
+  // chip content
+  --pf-c-chip__content--FontSize: var(--pf-global--FontSize--xs);
+  --pf-c-chip__content--ColumnGap: var(--pf-global--spacer--xs);
+
   // chip text
-  --pf-c-chip__text--FontSize: var(--pf-global--FontSize--xs);
   --pf-c-chip__text--Color: var(--pf-global--Color--100);
   --pf-c-chip__text--MaxWidth: 16ch;
 
-  // chip button
-  --pf-c-chip__c-button--PaddingTop: var(--pf-global--spacer--xs);
-  --pf-c-chip__c-button--PaddingRight: var(--pf-global--spacer--sm);
-  --pf-c-chip__c-button--PaddingBottom: var(--pf-global--spacer--xs);
-  --pf-c-chip__c-button--PaddingLeft: var(--pf-global--spacer--sm);
-  --pf-c-chip__c-button--MarginTop: calc(var(--pf-c-chip--PaddingTop) * -1);
-  --pf-c-chip__c-button--MarginRight: calc(var(--pf-c-chip--PaddingRight) / 2 * -1);
-  --pf-c-chip__c-button--MarginBottom: calc(var(--pf-c-chip--PaddingBottom) * -1);
-  --pf-c-chip__c-button--FontSize: var(--pf-global--FontSize--xs);
+  // chip actions
+  --pf-c-chip__actions--FontSize: var(--pf-global--FontSize--xs);
 
-  // chip badge
-  --pf-c-chip__c-badge--MarginLeft: var(--pf-global--spacer--xs);
+  // buttons within chip actions
+  --pf-c-chip__actions--c-button--PaddingTop: var(--pf-global--spacer--xs);
+  --pf-c-chip__actions--c-button--PaddingRight: var(--pf-global--spacer--sm);
+  --pf-c-chip__actions--c-button--PaddingBottom: var(--pf-global--spacer--xs);
+  --pf-c-chip__actions--c-button--PaddingLeft: var(--pf-global--spacer--sm);
+  --pf-c-chip__actions--c-button--MarginTop: calc(var(--pf-c-chip--PaddingTop) * -1);
+  --pf-c-chip__actions--c-button--MarginRight: calc(var(--pf-c-chip--PaddingRight) / 2 * -1);
+  --pf-c-chip__actions--c-button--MarginBottom: calc(var(--pf-c-chip--PaddingBottom) * -1);
+  --pf-c-chip__actions--c-button--FontSize: var(--pf-global--FontSize--xs);
 
   // icon
   --pf-c-chip__icon--MarginLeft: var(--pf-global--spacer--sm);
@@ -78,24 +81,6 @@
       font-size: var(--pf-c-chip--m-draggable__icon--FontSize);
     }
   }
-
-  // Button
-  .pf-c-button {
-    --pf-c-button--PaddingTop: var(--pf-c-chip__c-button--PaddingTop);
-    --pf-c-button--PaddingRight: var(--pf-c-chip__c-button--PaddingRight);
-    --pf-c-button--PaddingBottom: var(--pf-c-chip__c-button--PaddingBottom);
-    --pf-c-button--PaddingLeft: var(--pf-c-chip__c-button--PaddingLeft);
-    --pf-c-button--FontSize: var(--pf-c-chip__c-button--FontSize);
-
-    margin-top: var(--pf-c-chip__c-button--MarginTop);
-    margin-right: var(--pf-c-chip__c-button--MarginRight);
-    margin-bottom: var(--pf-c-chip__c-button--MarginBottom);
-  }
-
-  // badge
-  .pf-c-badge {
-    margin-left: var(--pf-c-chip__c-badge--MarginLeft);
-  }
 }
 
 // Text element
@@ -104,13 +89,37 @@
 
   position: relative;
   max-width: var(--pf-c-chip__text--MaxWidth);
-  font-size: var(--pf-c-chip__text--FontSize);
   color: var(--pf-c-chip__text--Color);
 }
 
 .pf-c-chip__icon + .pf-c-chip__text,
 .pf-c-chip__text + .pf-c-chip__icon {
   margin-left: var(--pf-c-chip__icon--MarginLeft);
+}
+
+.pf-c-chip__content {
+  display: flex;
+  align-items: center;
+  column-gap: var(--pf-c-chip__content--ColumnGap);
+  font-size: var(--pf-c-chip__content--FontSize);
+}
+
+.pf-c-chip__actions {
+  font-size: var(--pf-c-chip__actions--FontSize);
+
+  // Actions Button
+  .pf-c-button {
+    --pf-c-button--PaddingTop: var(--pf-c-chip__actions--c-button--PaddingTop);
+    --pf-c-button--PaddingRight: var(--pf-c-chip__actions--c-button--PaddingRight);
+    --pf-c-button--PaddingBottom: var(--pf-c-chip__actions--c-button--PaddingBottom);
+    --pf-c-button--PaddingLeft: var(--pf-c-chip__actions--c-button--PaddingLeft);
+    --pf-c-button--FontSize: var(--pf-c-chip__actions--c-button--FontSize);
+
+    margin-top: var(--pf-c-chip__actions--c-button--MarginTop);
+    margin-right: var(--pf-c-chip__actions--c-button--MarginRight);
+    margin-bottom: var(--pf-c-chip__actions--c-button--MarginBottom);
+    line-height: 1;
+  }
 }
 
 // stylelint-disable no-invalid-position-at-import-rule
