--- a/src/patternfly/components/Label/label.hbs
+++ b/src/patternfly/components/Label/label.hbs
@@ -7,9 +7,11 @@
     {{~> @partial-block}}
   {{/label-content}}
   {{#if label--isRemovable}}
-    {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'id="' label--id '-button"
-  aria-label="Remove" aria-labelledby="' label--id '-button ' label--id '-text"')}}
-      <i class="fas fa-times" aria-hidden="true"></i>
-    {{/button}}
+    {{#> label-actions}}
+      {{#> button button--modifier="pf-m-plain" button--attribute=(concat 'id="' label--id '-button"
+    aria-label="Remove" aria-labelledby="' label--id '-button ' label--id '-text"')}}
+        <i class="fas fa-times fa-fw" aria-hidden="true"></i>
+      {{/button}}
+    {{/label-actions}}
   {{/if}}
 </{{# if label--type}}{{label--type}}{{else if label--IsOverflow}}button{{else if label--IsAdd}}button{{else}}span{{/if}}>
